--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
   "dependencies": {},
   "devDependencies": {
     "@nx/js": "20.1.2",
+    "@nx/vite": "20.1.2",
+    "@nx/web": "20.1.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "18.16.9",
+    "@vitest/ui": "^1.3.1",
     "nx": "20.1.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
+    "vitest": "^1.3.1"
   },
   "workspaces": [
     "packages/*"
